Add social links

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="left">
                     <h1>We specialise in web development</h1>
                     <p>
-                        Need a website? We have you covered: we offer hand-coded websites. Don't worry about hosting it either,
+                        Need a website? We have you covered: we offer hand-coded websites. Don't worry about hosting and managing it either,
                         we'll do it for a minimal cost.
                     </p>
                 </div>
@@ -93,7 +93,7 @@
                     <h2>Fast and steady</h2>
                     <p>
                         Hand coded websites like ours have extremely high performance and speed. We can manipulate the metrics of your website easily. 
-                        This includes websites that are aesthetic and animated in nature.
+                        This includes websites that are demanding, full of animations and various features.
                     </p>
                 </div>
             </div>
@@ -110,14 +110,14 @@
                     <div class="design">
                         <h3>Blog Application (premium example)</h3>
                         <img class="computer" src="public/images/blog-app.jpg" alt="Computer depicting our blog API">
-                        </br> Visit <a href=""><i class="fa fa-github" aria-hidden="true"></i></a> to view the process and final product.
+                        </br> Visit <a href="https://github.com/UKvalleydigital"><i class="fa fa-github" aria-hidden="true"></i></a> to view the process and final product.
                     </div>
                 </div>
             </div>
             <div class="payments">
                 <h2>Payment plans <i class="fa fa-credit-card-alt" aria-hidden="true"></i></h2>
                 <p>
-                    A standard website of 5 pages costs £1200. Each additional pages costs another £100. At the start, you pay an initial £200 deposit and then we get to work.
+                    A standard website of 5 pages costs £1200. Each additional page costs another £100. At the start, you pay an initial £200 deposit and then we get to work.
                     You can pay the rest of the £1000 up front or you can choose to pay £100 per month for 10 months.
                 </p>
             </div>
@@ -138,17 +138,18 @@
                 <ul>
                     <li>5 pages</li>
                     <li>Unlimited revisions</li>
-                    <li>Lifetime updates</li></br>
+                    <li>Animations and interactive features</li></br>
                     <button><a href="pages/services.html" class="none">Learn more</a></button>
                     <button><a href="pages/contact.html" class="none">Contact us</a></button>
                 </ul>
             </div>
             <div class="service" id="service3">
                 <h3>Hosting + maintenance</h3>
-                <h4>£30 per month</h4>
+                <h4>£40 per month</h4>
                 <ul>
-                    <li>Included in both packages if you would like</li>
+                    <li>Host and maintain your website</li>
                     <li>Lifetime updates</li>
+                    <li>Manage website posts</li>
                     <li>Unlimited edits</li></br>
                     <button><a href="pages/services.html" class="none">Learn more</a></button>
                     <button><a href="pages/contact.html" class="none">Contact us</a></button>
@@ -162,12 +163,12 @@
         </div>
         <div class="icons">
             <span class="icon">
-                <a href="">
+                <a href="https://www.facebook.com/profile.php?id=61565471056289">
                         <i class="fa fa-facebook-official" aria-hidden="true"></i>
                 </a>
             </span>
             <span class="icon">
-                <a href="">
+                <a href="https://github.com/UKvalleydigital">
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </a>
             </span>
