--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,12 +27,12 @@
             <div class="icons">
                 <p>Visit us:</p>
                 <span class="icon">
-                    <a href="">
+                    <a href="https://www.facebook.com/profile.php?id=61565471056289">
                         <i class="fa fa-facebook-official" aria-hidden="true"></i>
                     </a>
                 </span>
                 <span class="icon">
-                    <a href="">
+                    <a href="https://github.com/UKvalleydigital">
                         <i class="fa fa-github" aria-hidden="true"></i>
                     </a>
                 </span>
@@ -51,7 +51,7 @@
         <div class="slide-container">
             <div class="slide-left">
                 <h2>We are experts in this industry</h2>
-                <p>Work with us for a polished product. You can see the process on our <a class="link" href="pages/services.html">services page</a>.</p>
+                <p>Work with us for a polished product. You can see the process on our <a class="link" href="services.html">services page</a>.</p>
             </div>
             <picture>
                 <source class="pic vscode1" media="(min-width: 952px)" srcset="../public/images/vscode1.jpg">
@@ -72,12 +72,12 @@
             <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
         </div>
         <div class="icons">
-            <a href="">
+            <a href="https://www.facebook.com/profile.php?id=61565471056289">
                 <span class="icon">
                     <i class="fa fa-facebook-official" aria-hidden="true"></i>
                 </span>
             </a>
-            <a href="">
+            <a href="https://github.com/UKvalleydigital">
                 <span class="icon">
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </span>
