--- a/pages/services.html
+++ b/pages/services.html
@@ -28,23 +28,23 @@
                     <div class="point">
                         <h2>Lifetime hosting and maintenance</h2>
                         <p>
-                            When your website is deployed, we offer a lifetime of updates and edits so that you don't have to do anything.
-                            Want to change your logo? Simple. Need to change your contact details? We can do that. Pay £30 per month, drop
-                            an email and we'll sort out all the technical details.
+                            When your website is finished, we deploy it, and offer a lifetime of updates and edits so that you don't have to do anything.
+                            Want to change your logo? Simple. Need to change your contact details? We can do that. Pay £40 per month, contact us for an update
+                            and we'll sort out all the technical details.
                         </p>
                     </div>
                     <div class="point">
                         <h2>Go beyond a simple website</h2>
                         <p>
                             We can implement many different features even if it's a standard 5 page website. The upcoming premium option will include 
-                            even more powerful features, specifically e-commerce. This will include robust security and continuous updates to help
+                            even more powerful features, specifically online transactions. This will include robust security and continuous updates to help
                             prevent malicious attacks on your site.
                         </p>
                     </div>
                     <div class="child">
                         <p>
-                            This example can be seen online <a href="https://garden-club-hereford.netlify.app/blog">here</a>. If you want to be able to manage your own blog on your website, you can sign up and log in
-                            through the admin portal. You will then be redirected a personal builder where you can edit, create and delete blog posts.
+                            This example can be seen online <a class="here" href="https://garden-club-hereford.netlify.app/blog">here</a>. If you want to be able to manage your own blog on your website, you can sign up and log in
+                            through the admin portal. You will then be redirected to a personal builder where you can edit, create and delete blog posts.
                         </p>
                         <h2 class="caption">Interative features: built-in blogs, animations and more.</h2>
                         <img class="blog" src="../public/images/blog-service.jpg" alt="We offer built in blogs for your website" width="500" height="660">
@@ -53,16 +53,17 @@
                 <div class="point">
                     <h2>Unlimited revisions</h2>
                     <p>
-                        For a standard website, you can ask us to revise and change the website any number of times before permanent deployment.
+                        For a standard website, you can ask us to revise and change the website any number of times before and after permanent deployment.
                         If anything doesn't feel quite right about your website, tell us. Constructive criticism is appreciated. If you decide to
-                        cancel before permanent deployment, you will be refunded your money.
+                        cancel before permanent deployment, you will be refunded your deposit money.
                     </p>
                 </div>
                 <div class="point">
                     <h2>Fast and efficient</h2>
                     <p>
                         It only takes us on average a couple days to have everything finished. As we continue this side of business, we only keep getting faster.
-                        We are a great option if you want a polished website quick, without it being rushed, insecure and full of bugs.
+                        We are a great option if you want a polished website quick, without it being rushed, insecure and full of bugs.</br></br>
+                        In addition, we design the website to perform optimally and fast.
                     </p>
                 </div>
             </div>
@@ -73,12 +74,12 @@
                 <p>Here is how working with us will go:</p>
                 <ul>
                     <li><i class="fa fa-check" aria-hidden="true"></i>You come and contact us with a new website idea.</li>
-                    <li><i class="fa fa-check" aria-hidden="true"></i>Make sure to send us examples, images you'd like to include, logos or anything to streamline the process.</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>Make sure to send us examples of your vision, images you'd like to include, logos or anything to streamline the process.</li>
                     <li><i class="fa fa-check" aria-hidden="true"></i>We'll ask you for a deposit of £200 and to sign a legal contract.</li>
                     <li><i class="fa fa-check" aria-hidden="true"></i>Once this is done, we confirm the order and get working. You'll get continuous updates throughout.</li>
                     <li><i class="fa fa-check" aria-hidden="true"></i>When the site is finished, we will send it to you for final opinions. Remember, if you don't like it, tell us!</li>
                     <li><i class="fa fa-check" aria-hidden="true"></i>Once you are pleased, you either pay the rest immediately or in monthly installments.</li>
-                    <li><i class="fa fa-check" aria-hidden="true"></i>If you want us to host and maintain it, you can pay £30 per month.</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>If you want us to host and maintain it, you can pay £40 per month.</li>
                 </ul>
                 <p class="warning">When using images, logos, etc, make sure it is legal for them to be used!</p>
             </div>
@@ -100,7 +101,7 @@
                 <ul>
                     <li>5 pages</li>
                     <li>Unlimited revisions</li>
-                    <li>Lifetime updates</li></br>
+                    <li>Animations and interactive features</li></br>
                     <button><a class="none" href="services.html">Learn more</a></button>
                     <button><a  class="none" href="contact.html">Contact us</a></button>
                 </ul>
@@ -109,8 +110,9 @@
                 <h3>Hosting + maintenance</h3>
                 <h4>£30 per month</h4>
                 <ul>
-                    <li>Included in both packages if you would like</li>
+                    <li>Host and maintain your website</li>
                     <li>Lifetime updates</li>
+                    <li>Manage website posts</li>
                     <li>Unlimited edits</li></br>
                     <button><a class="none" href="services.html">Learn more</a></button>
                     <button><a class="none" href="contact.html">Contact us</a></button>
@@ -122,12 +124,12 @@
             <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
         </div>
         <div class="icons">
-            <a href="">
+            <a href="https://www.facebook.com/profile.php?id=61565471056289">
                 <span class="icon">
                     <i class="fa fa-facebook-official" aria-hidden="true"></i>
                 </span>
             </a>
-            <a href="">
+            <a href="https://github.com/UKvalleydigital">
                 <span class="icon">
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </span>
