--- a/pages/about.html
+++ b/pages/about.html
@@ -28,9 +28,9 @@
                 <h2>Who we are <i class="fa fa-comments-o" aria-hidden="true"></i></h2>
                 <p>
                     We are a small web development company that makes static websites. A simple browse through the web
-                    shows the importance of having a solid website for a company. The benefits of having a set of experienced web
+                    shows the importance of having a solid website for a company. The benefits of having a set of experienced
                     web developers are that you recieve a high quality website made with maintainable, hand-written code. 
-                    Often websites made with online builders are made with quick templates, insecure security, and a lack of 
+                    Often websites are made with quick templates, insecure security, and a lack of 
                     interactive features like calendars, contact forms, blogs, etc.</br></br>
                     That's why we offer affordable yet functional websites, both for business owners and individuals. Even
                     if you don't want a website and are only inquiring, just give
@@ -55,7 +55,7 @@
                     <div class="design">
                         <h3>Blog Application (premium example)</h3>
                         <img class="computer" src="../public/images/blog-app.jpg" alt="Computer depicting our blog API">
-                        </br>Visit <a href=""><i class="fa fa-github" aria-hidden="true"></i></a> to view the process and final product.
+                        </br>Visit <a href="https://github.com/UKvalleydigital"><i class="fa fa-github" aria-hidden="true"></i></a> to view the process and final product.
                     </div>
                 </div>
             </div>
@@ -76,17 +76,18 @@
                 <ul>
                     <li>5 pages</li>
                     <li>Unlimited revisions</li>
-                    <li>Lifetime updates</li></br>
+                    <li>Animations and interactive features</li></br>
                     <button><a href="services.html" class="none">Learn more</a></button>
                     <button><a href="contact.html" class="none">Contact us</a></button>
                 </ul>
             </div>
             <div class="service" id="service3">
                 <h3>Hosting + maintenance</h3>
-                <h4>£30 per month</h4>
+                <h4>£40 per month</h4>
                 <ul>
-                    <li>Included in both packages if you would like</li>
+                    <li>Host and maintain your website</li>
                     <li>Lifetime updates</li>
+                    <li>Manage website posts</li>
                     <li>Unlimited edits</li></br>
                     <button><a href="services.html" class="none">Learn more</a></button>
                     <button><a href="contact.html" class="none">Contact us</a></button>
@@ -99,12 +100,12 @@
             <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
         </div>
         <div class="icons">
-            <a href="">
+            <a href="https://www.facebook.com/profile.php?id=61565471056289">
                 <span class="icon">
                     <i class="fa fa-facebook-official" aria-hidden="true"></i>
                 </span>
             </a>
-            <a href="">
+            <a href="https://github.com/UKvalleydigital">
                 <span class="icon">
                     <i class="fa fa-github" aria-hidden="true"></i>
                 </span>
