Finish details on website

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h1>We specialise in web development</h1>
                     <p>
                         Need a website? We have you covered: we offer hand-coded websites. Don't worry about hosting and managing it either,
-                        we'll do it for a minimal cost.
+                        we'll do it for you.
                     </p>
                 </div>
                 <div class="right">
@@ -92,7 +92,7 @@
                 <div class="slide-right">
                     <h2>Fast and steady</h2>
                     <p>
-                        Hand coded websites like ours have extremely high performance and speed. We can manipulate the metrics of your website easily. 
+                        Hand coded websites like ours have extremely high performance and speed. We can easily manipulate the metrics of your website. 
                         This includes websites that are demanding, full of animations and various features.
                     </p>
                 </div>
@@ -118,7 +118,7 @@
                 <h2>Payment plans <i class="fa fa-credit-card-alt" aria-hidden="true"></i></h2>
                 <p>
                     A standard website of 5 pages costs £1200. Each additional page costs another £100. At the start, you pay an initial £200 deposit and then we get to work.
-                    You can pay the rest of the £1000 up front or you can choose to pay £100 per month for 10 months.
+                    You can pay the rest of the £1000 up front or you can choose to pay £100 per month for 10 months, with no interest.
                 </p>
             </div>
         </div>
@@ -144,13 +144,12 @@
                 </ul>
             </div>
             <div class="service" id="service3">
-                <h3>Hosting + maintenance</h3>
-                <h4>£40 per month</h4>
+                <h3>Hosting + full maintenance</h3>
+                <h4>£75 per month</h4>
                 <ul>
-                    <li>Host and maintain your website</li>
-                    <li>Lifetime updates</li>
-                    <li>Manage website posts</li>
-                    <li>Unlimited edits</li></br>
+                    <li>Lifetime hosting</li>
+                    <li>Unlimited updates + edits</li>
+                    <li>24/7 maintenance + support</li></br>
                     <button><a href="pages/services.html" class="none">Learn more</a></button>
                     <button><a href="pages/contact.html" class="none">Contact us</a></button>
                 </ul>
