--- a/pages/about.html
+++ b/pages/about.html
@@ -30,10 +30,10 @@
                     We are a small web development company that makes static websites. A simple browse through the web
                     shows the importance of having a solid website for a company. The benefits of having a set of experienced
                     web developers are that you recieve a high quality website made with maintainable, hand-written code. 
-                    Often websites are made with quick templates, insecure security, and a lack of 
+                    Often websites are made with quick templates, poor security, and a lack of 
                     interactive features like calendars, contact forms, blogs, etc.</br></br>
                     That's why we offer affordable yet functional websites, both for business owners and individuals. Even
-                    if you don't want a website and are only inquiring, just give
+                    if you are only inquiring, just give
                     us a shout <a class="here" href="contact.html">here</a>.
                 </p>
             </div>
@@ -82,13 +82,12 @@
                 </ul>
             </div>
             <div class="service" id="service3">
-                <h3>Hosting + maintenance</h3>
-                <h4>£40 per month</h4>
+                <h3>Hosting + full maintenance</h3>
+                <h4>£75 per month</h4>
                 <ul>
-                    <li>Host and maintain your website</li>
-                    <li>Lifetime updates</li>
-                    <li>Manage website posts</li>
-                    <li>Unlimited edits</li></br>
+                    <li>Lifetime hosting</li>
+                    <li>Unlimited updates + edits</li>
+                    <li>24/7 maintenance + support</li></br>
                     <button><a href="services.html" class="none">Learn more</a></button>
                     <button><a href="contact.html" class="none">Contact us</a></button>
                 </ul>
