--- a/pages/services.html
+++ b/pages/services.html
@@ -72,14 +72,14 @@
             <div class="process">
                 <h2>The process</h2>
                 <p>Here is how working with us will go:</p>
-                <ul>
+                <ul class="process-ul">
                     <li><i class="fa fa-check" aria-hidden="true"></i>You come and contact us with a new website idea.</li>
                     <li><i class="fa fa-check" aria-hidden="true"></i>Make sure to send us examples of your vision, images you'd like to include, logos or anything to streamline the process.</li>
-                    <li><i class="fa fa-check" aria-hidden="true"></i>We'll ask you for a deposit of £200 and to sign a legal contract.</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>We'll ask you for a £200 deposit and to sign a legal contract.</li>
                     <li><i class="fa fa-check" aria-hidden="true"></i>Once this is done, we confirm the order and get working. You'll get continuous updates throughout.</li>
                     <li><i class="fa fa-check" aria-hidden="true"></i>When the site is finished, we will send it to you for final opinions. Remember, if you don't like it, tell us!</li>
                     <li><i class="fa fa-check" aria-hidden="true"></i>Once you are pleased, you either pay the rest immediately or in monthly installments.</li>
-                    <li><i class="fa fa-check" aria-hidden="true"></i>If you want us to host and maintain it, you can pay £40 per month.</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>If you want us to host and maintain it, you buy the domain name and pay £75 per month.</li>
                 </ul>
                 <p class="warning">When using images, logos, etc, make sure it is legal for them to be used!</p>
             </div>
@@ -107,13 +107,12 @@
                 </ul>
             </div>
             <div class="service" id="service3">
-                <h3>Hosting + maintenance</h3>
-                <h4>£30 per month</h4>
+                <h3>Hosting + full maintenance</h3>
+                <h4>£75 per month</h4>
                 <ul>
-                    <li>Host and maintain your website</li>
-                    <li>Lifetime updates</li>
-                    <li>Manage website posts</li>
-                    <li>Unlimited edits</li></br>
+                    <li>Lifetime hosting</li>
+                    <li>Unlimited updates + edits</li>
+                    <li>24/7 maintenance + support</li></br>
                     <button><a class="none" href="services.html">Learn more</a></button>
                     <button><a class="none" href="contact.html">Contact us</a></button>
                 </ul>
