Overlap footer in contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -67,7 +67,7 @@
             </div>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer contact-footer">
         <div class="logo">
             <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
         </div>
