Add new logos, change widths

--- a/pages/about.html
+++ b/pages/about.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
+            <a href="../index.html"><img src="../public/images/logo.jpg" alt="Our logo"></a>
         </div>
         <ul class="menu">
             <li><a href="about.html">About</a></li>
@@ -60,6 +60,35 @@
                 </div>
             </div>
         </div>
+        <div class="part">
+            <div class="about extra">
+                <h2>Extra info <i class="fa fa-comments-o" aria-hidden="true"></i></h2>
+                <h3>Do you offer refunds?</h3>
+                <p>
+                    Yes, until your website is fully deployed. Afterwards, you can only cancel without extra fees
+                    and no refund.
+                </p>
+                <h3>Are you willing to negotiate ways of payment?</h3>
+                <p>
+                    Yes, within reason. We try to be flexible with clients.
+                </p>
+                <h3>What happens if I'm late to payments?</h3>
+                <p>
+                    Again, we understand some clients may forget or have trouble paying. This is why we value communication
+                    in situations like these. If a client is a few days late, we will remind them. If a client is persistently
+                    late by months, we have the right to terminate our contract.
+                </p>
+                <h3>How do I pay?</h3>
+                <p>
+                    We use Stripe, where we send you a secure link via email to pay.
+                </p>
+                <h3>How long does it take to make a 5 page static website?</h3>
+                <p>
+                    It depends on the website, your responsiveness and our speed, from between a few days to at most 3 weeks. This is why
+                    we ask for you to have information, images, designs, ideas, etc ready to send to us.
+                </p>
+            </div>
+        </div>
         <div class="services-container">
             <h2>What we offer</h2>
             <div class="service" id="service1">
@@ -96,7 +125,7 @@
     </section>
     <footer class="footer">
         <div class="logo">
-            <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
+            <a href="../index.html"><img src="../public/images/logo.jpg" alt="Our logo"></a>
         </div>
         <div class="icons">
             <a href="https://www.facebook.com/profile.php?id=61565471056289">
