--- a/pages/services.html
+++ b/pages/services.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
+            <a href="../index.html"><img src="../public/images/logo.jpg" alt="Our logo"></a>
         </div>
         <ul class="menu">
             <li><a href="about.html">About</a></li>
@@ -120,7 +120,7 @@
     </section>
     <footer class="footer">
         <div class="logo">
-            <a href="../index.html"><img src="../public/images/logo.png" alt="Our logo"></a>
+            <a href="../index.html"><img src="../public/images/logo.jpg" alt="Our logo"></a>
         </div>
         <div class="icons">
             <a href="https://www.facebook.com/profile.php?id=61565471056289">
