--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <a href="index.html"><img src="public/images/logo.png" alt="Our logo"></a>
+            <a href="index.html"><img src="public/images/logo.jpg" alt="Our logo"></a>
         </div>
         <ul class="menu">
             <li><a href="pages/about.html">About</a></li>
@@ -158,7 +158,7 @@
     </section>
     <footer class="footer">
         <div class="logo">
-            <a href="../index.html"><img src="public/images/logo.png" alt="Our logo"></a>
+            <a href="../index.html"><img src="public/images/logo.jpg" alt="Our logo"></a>
         </div>
         <div class="icons">
             <span class="icon">
