Increase service text size

--- a/pages/about.html
+++ b/pages/about.html
@@ -76,7 +76,7 @@
                 <p>
                     Again, we understand some clients may forget or have trouble paying. This is why we value communication
                     in situations like these. If a client is a few days late, we will remind them. If a client is persistently
-                    late by months, we have the right to terminate our contract.
+                    late by months, we have the right to terminate our contract. This will include withdrawing your website.
                 </p>
                 <h3>How do I pay?</h3>
                 <p>
