Wrap p tags for other pages

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="service" id="service1">
                 <h3>Premium</h3>
                 <h4>Minimum £10,000.</h4>
-                Coming soon! </br></br>
+                <p>Coming soon!</p></br></br>
                 <button><a href="pages/services.html" class="none">Learn more</a></button>
                 <button><a href="pages/contact.html" class="none">Contact us</a></button>
             </div>
