--- a/pages/services.html
+++ b/pages/services.html
@@ -90,7 +90,7 @@
             <div class="service">
                 <h3>Premium</h3>
                 <h4>Minimum £10,000. Can be negotiated</h4>
-                Coming soon!</br></br>
+                <p>Coming soon!</p></br></br>
                 <button><a class="none" href="services.html">Learn more</a></button>
                 <button><a class="none" href="contact.html">Contact us</a></button>
             </div>
