Update info on service page

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <h2>Payment plans <i class="fa fa-credit-card-alt" aria-hidden="true"></i></h2>
                 <p>
                     A standard website of 5 pages costs £1200. Each additional page costs another £100. At the start, you pay an initial £200 deposit and then we get to work.
-                    You can pay the rest of the £1000 up front or you can choose to pay £100 per month for 10 months, with no interest.
+                    You can pay the rest of the £1000 up front or you can choose to pay £100/mo for 10 months, with no interest.
                 </p>
             </div>
         </div>
