--- a/pages/about.html
+++ b/pages/about.html
@@ -66,7 +66,7 @@
                 <h3>Do you offer refunds?</h3>
                 <p>
                     Yes, until your website is fully deployed. Afterwards, you can only cancel without extra fees
-                    and no refund.
+                    and no refund. You will still be expected to pay for the full website.
                 </p>
                 <h3>Are you willing to negotiate ways of payment?</h3>
                 <p>
@@ -75,12 +75,12 @@
                 <h3>What happens if I'm late to payments?</h3>
                 <p>
                     Again, we understand some clients may forget or have trouble paying. This is why we value communication
-                    in situations like these. If a client is a few days late, we will remind them. If a client is persistently
-                    late by months, we have the right to terminate our contract. This will include withdrawing your website.
+                    in situations like these. For clients who don't contact us, we have a right to remove or otherwise
+                    the website.  
                 </p>
                 <h3>How do I pay?</h3>
                 <p>
-                    We use Stripe, where we send you a secure link via email to pay.
+                    We use Stripe, a secure third party service.
                 </p>
                 <h3>How long does it take to make a 5 page static website?</h3>
                 <p>
