--- a/pages/services.html
+++ b/pages/services.html
@@ -74,14 +74,17 @@
                 <p>Here is how working with us will go:</p>
                 <ul class="process-ul">
                     <li><i class="fa fa-check" aria-hidden="true"></i>You come and contact us with a new website idea.</li>
-                    <li><i class="fa fa-check" aria-hidden="true"></i>Make sure to send us examples of your vision, images you'd like to include, logos or anything to streamline the process.</li>
-                    <li><i class="fa fa-check" aria-hidden="true"></i>We'll ask you for a £200 deposit and to sign a legal contract.</li>
-                    <li><i class="fa fa-check" aria-hidden="true"></i>Once this is done, we confirm the order and get working. You'll get continuous updates throughout.</li>
-                    <li><i class="fa fa-check" aria-hidden="true"></i>When the site is finished, we will send it to you for final opinions. Remember, if you don't like it, tell us!</li>
-                    <li><i class="fa fa-check" aria-hidden="true"></i>Once you are pleased, you either pay the rest immediately or in monthly installments.</li>
-                    <li><i class="fa fa-check" aria-hidden="true"></i>If you want us to host and maintain it, you buy the domain name and pay £75 per month.</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>We'll ask you to sign a legal contract.</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>A drive shared with you, where you can upload images, logos, template websites, etc.
+                        We will also ask you to pay a £200 deposit.</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>Once this is , we confirm the order and get working. You'll get continuous updates throughout.</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>When the site is finished, we will send it to you for final opinions. You have 7 days to review it
+                        and provide feedback.</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>When it is deployed, you either pay the rest immediately or in monthly installments.</li>
+                    <li><i class="fa fa-check" aria-hidden="true"></i>If you want us to host and maintain it, you buy the domain name and pay £75 per month. A guide on
+                        domain name registration will be provided.</li>
                 </ul>
-                <p class="warning">When using images, logos, etc, make sure it is legal for them to be used!</p>
+                <p class="warning">When using images, logos, etc, make sure you hold all permissions for them to be used!</p>
             </div>
             <div class="image"></div>
         </div>
