--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Above and Beyond | We specialise in web development">
+    <meta name="keywords" content="HTML, CSS, website, development, Valleydigital, UK">
     <title>Home</title>
     <link rel="stylesheet" href="public/css/default.css">
     <link rel="stylesheet" href="public/css/media.css">
