Change title tags

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact us</title>
+    <title>Valley Digital | Above and Beyond | Contact</title>
     <link rel="stylesheet" href="../public/css/default.css">
     <link rel="stylesheet" href="../public/css/media.css">
     <link rel="stylesheet" href="../public/css/contact.css">
