--- a/pages/services.html
+++ b/pages/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services</title>
+    <title>Valley Digital | Above and Beyond | Services</title>
     <link rel="stylesheet" href="../public/css/default.css">
     <link rel="stylesheet" href="../public/css/services.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
