--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Above and Beyond | We specialise in web development">
     <meta name="keywords" content="HTML, CSS, website, development, Valleydigital, UK">
-    <title>Home</title>
+    <title>Valley Digital | Above and Beyond | Home</title>
     <link rel="stylesheet" href="public/css/default.css">
     <link rel="stylesheet" href="public/css/media.css">
     <link rel="stylesheet" href="public/css/index.css">
