--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Valley Digital | Above and Beyond | About</title>
     <link rel="stylesheet" href="../public/css/default.css">
     <link rel="stylesheet" href="../public/css/media.css">
     <link rel="stylesheet" href="../public/css/about.css">
